# practical-bandits-tutorial

./: README.md  pyproject.toml
notebooks/: Off-policy learning.ipynb  on-policy.ipynb
